# easy-slug-maker

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
easy_slug_maker/: __init__.py  core.py
tests/: test_easy_slug_maker.py
